Fixed spacing part 4

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -4448,7 +4448,6 @@ input[type="button"].btn-block {
   font-size: 2.1rem;
   line-height: inherit;
   white-space: nowrap;
-  padding: 1rem 1rem;
 }
 
 .navbar-brand:hover, .navbar-brand:focus {
@@ -4810,7 +4809,6 @@ input[type="button"].btn-block {
 
 .navbar-dark .navbar-brand {
   color: #FA9200;
-  padding: 1rem 1rem;
 }
 
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
